--- a/index.html
+++ b/index.html
@@ -74,7 +74,6 @@
                 <!-- Left Column: Main Menu -->
                 <div class="lg:col-span-2">
                     <h2 class="text-xl font-semibold text-slate-700 mb-4">เมนูจัดการหลัก</h2>
-                    <!-- *** อัปเดต: ปรับปรุง Grid ให้เหมาะสมกับจำนวนเมนูใหม่ *** -->
                     <div class="grid grid-cols-2 md:grid-cols-3 gap-5">
                         <!-- Manage Orders -->
                         <a href="order-history.html" class="menu-card p-5 rounded-xl shadow-sm border border-slate-200 text-center flex flex-col items-center justify-center">
@@ -144,13 +143,11 @@
             const startOfMonth = Timestamp.fromDate(new Date(today.getFullYear(), today.getMonth(), 1));
 
             // --- Quick Stats ---
-            // 1. Pending Orders
             const pendingOrdersQuery = query(collection(db, "orders"), where("processingStatus", "==", "รอดำเนินการ"));
             onSnapshot(pendingOrdersQuery, (snapshot) => {
                 document.getElementById('pending-orders-count').textContent = snapshot.size;
             });
 
-            // 2. Monthly Sales & Profit
             const monthlyOrdersQuery = query(collection(db, "orders"), where("orderDate", ">=", startOfMonth));
             onSnapshot(monthlyOrdersQuery, (snapshot) => {
                 let totalSales = 0;
@@ -170,7 +167,6 @@
             });
 
             // --- Right Column ---
-            // 1. Recent Orders
             const recentOrdersContainer = document.getElementById('recent-orders-container');
             const recentOrdersQuery = query(collection(db, "orders"), orderBy("orderDate", "desc"), limit(5));
             const customersSnapshot = await getDocs(collection(db, "customers"));
@@ -202,7 +198,7 @@
                 });
             });
 
-            // 2. Low Stock Items
+            // --- อัปเดต: Low Stock Items ---
             const lowStockContainer = document.getElementById('low-stock-container');
             const lowStockQuery = query(collection(db, "materials"), where("stockRemaining", "<=", 10), orderBy("stockRemaining", "asc"), limit(5));
             onSnapshot(lowStockQuery, (snapshot) => {
@@ -213,16 +209,21 @@
                 }
                 snapshot.forEach(doc => {
                     const item = doc.data();
-                    const itemCard = document.createElement('a');
-                    itemCard.href = 'stock.html'; // Link to stock page
-                    itemCard.className = 'block bg-slate-50 p-4 rounded-lg border border-slate-200 hover:bg-slate-100 transition-colors';
+                    const itemCard = document.createElement('div'); // เปลี่ยนจาก a เป็น div
+                    itemCard.className = 'bg-slate-50 p-4 rounded-lg border border-slate-200 flex justify-between items-center';
+                    
+                    const sizeHtml = item.size ? `<p class="text-sm text-slate-500">${item.size} mm</p>` : '';
+
                     itemCard.innerHTML = `
-                        <div class="flex justify-between items-center">
-                            <div>
-                                <p class="font-semibold text-slate-800">${item.name}</p>
-                                <p class="text-sm text-slate-500">${item.size || 'N/A'} mm</p>
-                            </div>
-                            <div class="font-bold text-lg text-rose-500">${item.stockRemaining}</div>
+                        <div>
+                            <p class="font-semibold text-slate-800">${item.name}</p>
+                            ${sizeHtml}
+                        </div>
+                        <div class="text-right">
+                            <p class="font-bold text-lg text-rose-500 mb-1">${item.stockRemaining}</p>
+                            <a href="intake.html?materialId=${doc.id}" class="text-xs bg-emerald-500 text-white font-semibold py-1 px-2 rounded-md hover:bg-emerald-600 transition-colors">
+                                รับของเข้า
+                            </a>
                         </div>
                     `;
                     lowStockContainer.appendChild(itemCard);
