--- a/intake.html
+++ b/intake.html
@@ -70,7 +70,6 @@
                      <div class="space-y-6 p-4 border-l-4 border-emerald-300 bg-emerald-50 rounded-r-lg">
                         <div>
                             <label for="type" class="block text-sm font-medium text-stone-700 mb-1">ประเภท *</label>
-                            <!-- *** อัปเดต: เพิ่ม "จี้" เข้าไปใน dropdown *** -->
                             <select id="type" name="type" class="w-full px-3 py-2 border border-stone-300 rounded-md">
                                 <option value="หิน">หิน</option>
                                 <option value="อุปกรณ์ตกแต่ง">อุปกรณ์ตกแต่ง</option>
@@ -307,9 +306,27 @@
         });
 
         // --- Initial Setup ---
-        document.getElementById('importDate').valueAsDate = new Date();
-        populateExistingItems();
-        handleModeChange();
+        async function initializePage() {
+            document.getElementById('importDate').valueAsDate = new Date();
+            await populateExistingItems();
+            handleModeChange();
+
+            // --- อัปเดต: Auto-select item from URL parameter ---
+            const urlParams = new URLSearchParams(window.location.search);
+            const materialIdFromUrl = urlParams.get('materialId');
+
+            if (materialIdFromUrl) {
+                const option = existingItemSelect.querySelector(`option[value="${materialIdFromUrl}"]`);
+                if (option) {
+                    document.getElementById('mode-existing').checked = true;
+                    handleModeChange();
+                    existingItemSelect.value = materialIdFromUrl;
+                    intakeForm.scrollIntoView({ behavior: 'smooth' });
+                }
+            }
+        }
+
+        initializePage();
     </script>
 </body>
 </html>
