--- a/index.html
+++ b/index.html
@@ -29,11 +29,6 @@
             transform: scale(1.03);
             box-shadow: 0 8px 25px rgba(0,0,0,0.07);
         }
-        .gradient-text {
-            background: linear-gradient(to right, #38bdf8, #3b82f6);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-        }
     </style>
 </head>
 <body class="min-h-screen">
@@ -74,7 +69,7 @@
                 <!-- Left Column: Main Menu -->
                 <div class="lg:col-span-2">
                     <h2 class="text-xl font-semibold text-slate-700 mb-4">เมนูจัดการหลัก</h2>
-                    <div class="grid grid-cols-2 md:grid-cols-3 gap-5">
+                    <div class="grid grid-cols-2 md:grid-cols-4 gap-5">
                         <!-- Manage Orders -->
                         <a href="order-history.html" class="menu-card p-5 rounded-xl shadow-sm border border-slate-200 text-center flex flex-col items-center justify-center">
                             <div class="h-14 w-14 rounded-full bg-indigo-100 text-indigo-600 flex items-center justify-center mb-3"><svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10" /></svg></div>
@@ -84,6 +79,11 @@
                         <a href="customers.html" class="menu-card p-5 rounded-xl shadow-sm border border-slate-200 text-center flex flex-col items-center justify-center">
                             <div class="h-14 w-14 rounded-full bg-amber-100 text-amber-600 flex items-center justify-center mb-3"><svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.653-.124-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.653.124-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z" /></svg></div>
                             <h3 class="text-md font-semibold text-slate-800">ข้อมูลลูกค้า</h3>
+                        </a>
+                        <!-- *** อัปเดต: เพิ่มเมนู "จัดการผู้ขาย" *** -->
+                        <a href="suppliers.html" class="menu-card p-5 rounded-xl shadow-sm border border-slate-200 text-center flex flex-col items-center justify-center">
+                            <div class="h-14 w-14 rounded-full bg-rose-100 text-rose-600 flex items-center justify-center mb-3"><svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z" /><path stroke-linecap="round" stroke-linejoin="round" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z" /></svg></div>
+                            <h3 class="text-md font-semibold text-slate-800">จัดการผู้ขาย</h3>
                         </a>
                         <!-- Stock -->
                         <a href="stock.html" class="menu-card p-5 rounded-xl shadow-sm border border-slate-200 text-center flex flex-col items-center justify-center">
@@ -198,7 +198,6 @@
                 });
             });
 
-            // --- อัปเดต: Low Stock Items ---
             const lowStockContainer = document.getElementById('low-stock-container');
             const lowStockQuery = query(collection(db, "materials"), where("stockRemaining", "<=", 10), orderBy("stockRemaining", "asc"), limit(5));
             onSnapshot(lowStockQuery, (snapshot) => {
@@ -209,7 +208,7 @@
                 }
                 snapshot.forEach(doc => {
                     const item = doc.data();
-                    const itemCard = document.createElement('div'); // เปลี่ยนจาก a เป็น div
+                    const itemCard = document.createElement('div');
                     itemCard.className = 'bg-slate-50 p-4 rounded-lg border border-slate-200 flex justify-between items-center';
                     
                     const sizeHtml = item.size ? `<p class="text-sm text-slate-500">${item.size} mm</p>` : '';
